--- a/maps-state-drilldown-to-county.htm
+++ b/maps-state-drilldown-to-county.htm
@@ -169,3 +169,30 @@ $(function () {
         }
     });
 });
+</script>
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-79004335-1', 'auto');
+    ga('send', 'pageview');
+  </script>
+
+</head>
+
+<body>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h1><a href="index.htm">BEA-CHARTS</a> | Map Color Axis</h1>
+        <p class="small">Release: MM/DD/YYYY</p>
+        <div id="container">
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
+
+</html>
