updated highcharts code for drilldown
and changed title

--- a/maps-state-drilldown-to-county.htm
+++ b/maps-state-drilldown-to-county.htm
@@ -21,6 +21,7 @@
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
   <script src="https://code.highcharts.com/maps/highmaps.js"></script>
   <script src="https://code.highcharts.com/maps/modules/data.js"></script>
+<script src="https://code.highcharts.com/maps/modules/drilldown.js"></script>
   <script src="https://code.highcharts.com/mapdata/countries/us/us-all.js"></script>
 
   <!-- 2. Add the JavaScript to initialize the chart on document ready -->
@@ -186,8 +187,8 @@ $(function () {
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h1><a href="index.htm">BEA-CHARTS</a> | Map Color Axis</h1>
-        <p class="small">Release: MM/DD/YYYY</p>
+        <h1><a href="index.htm">BEA-CHARTS</a> | Drilldown Map: State to Counties</h1>
+        <p class="small">Last update: 06/09/2016</p>
         <div id="container">
         </div>
       </div>
